--- a/api_intro.ipynb
+++ b/api_intro.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = OpenAI(api_key=\"sk-proj-UTqkc8P9MHzBmDI1NRNXT3BlbkFJgluhBK4tMXfsr5hQf9kp\")"
+    "client = OpenAI(api_key=\"\")"
    ]
   },
   {
