--- a/rag-intro.ipynb
+++ b/rag-intro.ipynb
@@ -188,7 +188,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "client = OpenAI(api_key=\"sk-proj-UTqkc8P9MHzBmDI1NRNXT3BlbkFJgluhBK4tMXfsr5hQf9kp\")"
+    "client = OpenAI(api_key=\"\")"
    ]
   },
   {
