--- a/api_intro.ipynb
+++ b/api_intro.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = OpenAI(api_key=\"\")"
+    "# client init removed for safety"
    ]
   },
   {
