--- a/rag-intro.ipynb
+++ b/rag-intro.ipynb
@@ -188,7 +188,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "client = OpenAI(api_key=\"\")"
+    "# client init removed for safety"
    ]
   },
   {
